# rust_develop_template

./: .env.dev  .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
benches/: bench1.rs  bench2.rs
benchs/: bench1.rs  bench2.rs
src/: errors.rs  lib.rs
src/rust_develop_template1/: main.rs
src/rust_develop_template2/: main.rs
tests/: test1.rs  test2.rs
